# wishes

./: Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
database/: init.sql
wishes_app/: __init__.py  app.py  db.py
wishes_app/templates/: index.html  wishes.html
wishes_app/templates/layouts/: base.html
