[tool.poetry]
name = "wishes"
version = "0.1.0"
description = "Flask project to share wishes"
authors = ["dzigr <dmbrag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
